; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/affs/extr_super.c_affs_write_super.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/affs/extr_super.c_affs_write_super.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32, i32 }

@MS_RDONLY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"AFFS: write_super() at %lu, clean=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.super_block*)* @affs_write_super to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @affs_write_super(%struct.super_block* %0) #0 {
  %2 = alloca %struct.super_block*, align 8
  %3 = alloca i32, align 4
  store %struct.super_block* %0, %struct.super_block** %2, align 8
  store i32 2, i32* %3, align 4
  %4 = load %struct.super_block*, %struct.super_block** %2, align 8
  %5 = call i32 @lock_super(%struct.super_block* %4)
  %6 = load %struct.super_block*, %struct.super_block** %2, align 8
  %7 = getelementptr inbounds %struct.super_block, %struct.super_block* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @MS_RDONLY, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %22, label %12

12:                                               ; preds = %1
  %13 = load %struct.super_block*, %struct.super_block** %2, align 8
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @affs_commit_super(%struct.super_block* %13, i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = load %struct.super_block*, %struct.super_block** %2, align 8
  %21 = getelementptr inbounds %struct.super_block, %struct.super_block* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  br label %25

22:                                               ; preds = %1
  %23 = load %struct.super_block*, %struct.super_block** %2, align 8
  %24 = getelementptr inbounds %struct.super_block, %struct.super_block* %23, i32 0, i32 1
  store i32 0, i32* %24, align 4
  br label %25

25:                                               ; preds = %22, %12
  %26 = load %struct.super_block*, %struct.super_block** %2, align 8
  %27 = call i32 @unlock_super(%struct.super_block* %26)
  %28 = call i32 (...) @get_seconds()
  %29 = load i32, i32* %3, align 4
  %30 = call i32 @pr_debug(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %28, i32 %29)
  ret void
}

declare dso_local i32 @lock_super(%struct.super_block*) #1

declare dso_local i32 @affs_commit_super(%struct.super_block*, i32) #1

declare dso_local i32 @unlock_super(%struct.super_block*) #1

declare dso_local i32 @pr_debug(i8*, i32, i32) #1

declare dso_local i32 @get_seconds(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
